--- a/GameEditor/Base.lproj/ValueEditors.xib
+++ b/GameEditor/Base.lproj/ValueEditors.xib
@@ -965,7 +965,7 @@
                                                         <constraints>
                                                             <constraint firstAttribute="height" constant="14" id="Ael-yA-W8E"/>
                                                         </constraints>
-                                                        <textFieldCell key="cell" controlSize="small" lineBreakMode="truncatingTail" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" id="Lrz-hm-b25">
+                                                        <textFieldCell key="cell" controlSize="small" lineBreakMode="truncatingTail" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" title="Key" id="Lrz-hm-b25">
                                                             <font key="font" metaFont="smallSystem"/>
                                                             <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
                                                             <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
@@ -1101,11 +1101,11 @@
                                                             </tabViewItem>
                                                             <tabViewItem label="Number" identifier="2" id="X9w-de-kKa" userLabel="(1) Number">
                                                                 <view key="view" id="jrr-Aq-CkS">
-                                                                    <rect key="frame" x="0.0" y="0.0" width="101" height="15"/>
+                                                                    <rect key="frame" x="0.0" y="0.0" width="101" height="14"/>
                                                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                                     <subviews>
                                                                         <textField verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="lJs-nV-AFF" customClass="UserDataTextField">
-                                                                            <rect key="frame" x="-2" y="0.0" width="103" height="14"/>
+                                                                            <rect key="frame" x="-2" y="-1" width="103" height="14"/>
                                                                             <textFieldCell key="cell" controlSize="small" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" state="on" id="XBm-KG-oxu">
                                                                                 <font key="font" metaFont="smallSystem"/>
                                                                                 <color key="textColor" name="textColor" catalog="System" colorSpace="catalog"/>
