--- a/GameEditor/Base.lproj/ValueEditors.xib
+++ b/GameEditor/Base.lproj/ValueEditors.xib
@@ -960,7 +960,7 @@
                                                 <rect key="frame" x="1" y="1" width="102" height="15"/>
                                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                 <subviews>
-                                                    <textField verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" translatesAutoresizingMaskIntoConstraints="NO" id="MiA-xy-Moc">
+                                                    <textField verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" translatesAutoresizingMaskIntoConstraints="NO" id="MiA-xy-Moc" customClass="UserDataTextField">
                                                         <rect key="frame" x="1" y="0.0" width="102" height="14"/>
                                                         <constraints>
                                                             <constraint firstAttribute="height" constant="14" id="Ael-yA-W8E"/>
